--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,7 +7,7 @@
 
 
     /*Make the mobile NavBar disappear at the start*/
-    .mobileNavbar{
+    .mobileNavItems{
          display: none;
     }
 
@@ -18,20 +18,24 @@
     .overwriteHeight{
         /*I dont want my buttons to stretch when the burger menu is dropped down*/
         height:38px!important;
+        margin-top: 10px;
     }
     .overwriteWidth{
         /*control buttons width so that the box doesnt become so small that the text goes out of the border*/
         width:82px!important;
+        margin-top: 10px;
     }
 
 
     .overwritePadTopBottom{
         /*Remove padding top and bottom from Burger Menu*/
-        padding-top:0px!important; 
-        padding-bottom:0px!important;
+        padding-top:10px!important; 
+        padding-bottom:10px!important;
 
     }
-
+    #cart-outline{
+        margin-top: 10px;
+    }
 
 
 /*Start of media for responsive design*/
@@ -40,8 +44,10 @@
 
 
     /*Make the mobile NavBar appear and disable the main navbar*/
-    .mobileNavbar{
+    .mobileNavItems{
         display: flex;
+        width:100px;
+        margin: 2px;
     }
 
     .mainNavbar{
