--- a/css/productVer1.css
+++ b/css/productVer1.css
@@ -35,6 +35,7 @@ body {
     align-items: left;
     margin: 0px 20px;
     margin-top: -200px;
+    border: 1px solid red;
     color: #000;
 }
 
@@ -63,14 +64,4 @@ body {
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
-}
-
-.breadcrumb a:link {
-    text-decoration: none;
-    color: #989898;
-    font-weight: bold;
-}
-
-.breadcrumb-item.active {
-    font-weight: bold;
 }
