--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -2,7 +2,14 @@
     box-sizing: border-box;
   }
 
-  .row {
+  .text h1 h2 p{
+
+    color:black
+  }
+
+  
+
+ /* .row {
     display: flex;
   }
   
@@ -24,7 +31,7 @@
   text-align: center;
 }
 
-* {
+ {
   box-sizing: border-box;
 }
 #aboutUsContainer {
@@ -40,7 +47,6 @@
   margin: 10px 0;
 }
 
-/*
 .container { 
 border: 1px solid red;
  }
