--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -17,13 +17,14 @@ h2 { font-size: 24px;}
 h3 { font-size: 22px;}
 h4 { font-size: 20px;}
 h5 { font-size: 18px;}
+h6 { font-size: 16px;}
 
 
-h1, h2, h3, h4, h5 {
-/*
+/* h1, h2, h3, h4, h5 {
+
     color: #4f4f4f;
-*/
-}
+
+} */
 
 
 /*Common Styles End*/
